Fixed top and fixed styles so their z-index is greater than everything else

--- a/assets/css/portfolio_images.css
+++ b/assets/css/portfolio_images.css
@@ -3,6 +3,7 @@
     padding: 10px 20px 10px 0px;
     clear: both;
     display: inline-block;
+    z-index: 0;
 }
 
 .labels {
