--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,12 @@ p {
     text-align: right;
     line-height: 100px;
     border-bottom: 1px solid #ccc;
+    z-index: 1000;
 }
 
 .fixed {
     position: fixed;
     float: left;
-    z-index: 0;
     background-color: #4aaaa5;
     height: 100px;
     top: 0;
